@@ -1,3 +1,15 @@
+2009-04-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-make-tramp-temp-file): Simplify setting file
+	modes.
+	(tramp-default-file-modes) New defun.  Replace all calls of
+	`file-modes' by this.
+	(tramp-handle-find-backup-file-name): Use `symbol-value' instead
+	of `boundp'.
+
+	* tramp-fish.el (tramp-fish-do-copy-or-rename-file-directly): Use
+	`tramp-default-file-modes'.
+
 2009-03-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-find-shell)
